fix:pagination and sorting products