@@ -2,7 +2,6 @@ package com.emazon.stock.api.application.handler;
 import com.emazon.stock.api.application.dto.ProductRequest;
 import com.emazon.stock.api.application.dto.ProductResponse;
 import com.emazon.stock.api.application.mapper.ProductRequestMapper;
-import com.emazon.stock.api.application.mapper.ProductResponseMapper;
 import com.emazon.stock.api.domain.api.IProductServicePort;
 import com.emazon.stock.api.domain.model.Product;
 import com.emazon.stock.api.domain.utils.pagination.PagedResult;
@@ -12,9 +11,8 @@ import com.emazon.stock.api.domain.utils.pagination.SortDirection;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -23,26 +21,44 @@ public class ProductHandler implements IProductHandler{
     private final IProductServicePort productServicePort;
     private final ProductRequestMapper productRequestMapper;
 
-    private final ProductResponseMapper productResponseMapper;
     @Override
     public void saveProduct(ProductRequest productRequest) {
         Product product = productRequestMapper.toProduct(productRequest);
         productServicePort.saveProduct(product);
     }
-
     @Override
-    public PagedResult<ProductResponse> getAllBrands(int page, int size, String sortBy, String direction) {
+    public PagedResult<ProductResponse> getAllProducts(
+            int page, int size, String sortBy, String direction,
+            String name, String brand, String categories) {
+
         Pagination pagination = new Pagination(page, size);
-        SortCriteria sortCriteria = new SortCriteria(sortBy, SortDirection.valueOf(direction.toUpperCase()));
-
-        PagedResult<Product> pagedProducts = productServicePort.getAllProducts(pagination, sortCriteria);
-
-        // Convertir cada Product a ProductResponse usando el mapper
+        SortDirection sortDirection = getSortDirection(direction);
+        SortCriteria sortCriteria = new SortCriteria(sortBy, sortDirection);
+        PagedResult<Product> pagedProducts = productServicePort.getAllProducts(
+                pagination, sortCriteria, name, brand, categories);
         List<ProductResponse> productResponses = pagedProducts.getContent().stream()
-                .map(productResponseMapper::productToProductResponse)
-                .collect(Collectors.toList());
-
+                .map(product -> new ProductResponse(
+                        product.getName(),
+                        product.getDescription(),
+                        product.getQuantity(),
+                        product.getPrice(),
+                        product.getBrandId(),
+                        product.getCategoryIds()
+                )).toList();
         return new PagedResult<>(productResponses, pagedProducts.getTotalElements(), pagedProducts.getTotalPages());
     }
+
+    private SortDirection getSortDirection(String direction) {
+        if (direction == null) {
+            return SortDirection.ASC;
+        }
+        for (SortDirection sortDirection : SortDirection.values()) {
+            if (sortDirection.name().equalsIgnoreCase(direction)) {
+                return sortDirection;
+            }
+        }
+        return SortDirection.ASC;
+    }
+
 
 }
